[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/SFX/fireball/fire_ball3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SFX/fireball/fire_ball1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SFX/fireball/fire_ball2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/effect/light.png" type="Texture" id=4]
[ext_resource path="res://scripts/player/fire_spell.gd" type="Script" id=5]
[ext_resource path="res://scenes/SFX/general/explosion_particless.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70, 25 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FireLight:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplosionParticless:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplosionParticless:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "light_strenght"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("FireLight:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 0.6, 0.6, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 75 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplosionParticless:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 60 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplosionParticless:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="FireSpell" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="FireBall1" parent="." instance=ExtResource( 2 )]
emitting = false
one_shot = true

[node name="FireBall2" parent="." instance=ExtResource( 3 )]
emitting = false
one_shot = true

[node name="FireBall3" parent="." instance=ExtResource( 1 )]
emitting = false
one_shot = true

[node name="FireLight" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.01
color = Color( 0.968627, 0.478431, 0.0431373, 1 )
energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "light_strenght"
anims/RESET = SubResource( 1 )
anims/light_strenght = SubResource( 2 )

[node name="ExplosionParticless" parent="." instance=ExtResource( 6 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
